Fix width issues on mobile scnreen sizes

--- a/app/styles.css
+++ b/app/styles.css
@@ -117,7 +117,9 @@ h4 {
 
 @media screen and (max-width: 768px) {
   .main-content-container {
-    padding-top: 1rem;
+    width: 100%;
+    padding: 1rem 1.25rem 0;
+    box-sizing: border-box;
   }
 }
 
@@ -537,6 +539,7 @@ h4 {
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
   gap: 0.5rem;
   font-size: 0.9rem;
 }
